adding version java 11 and spring 2.7.13